# aiven-mysql-migrate

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.test.yaml  install-mysql-config.exp  mypy.ini  pyproject.toml  requirement-dev.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yml
aiven_mysql_migrate/: config.py  dump_tools.py  enums.py  exceptions.py  main.py  migration.py  migration_error.py  migration_executor.py  utils.py
test/sys/: test_migration.py
test/unit/: test_dump_tools.py  test_migration.py  test_migration_executor.py  test_utils.py
